--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
         <div id="info" class="status-box">正在載入資訊...</div>
     </div>
     <script>
-        liff.init({ liffId: "2007557804-VzprogWq" })
-        .then(() => {
-            console.log("LIFF initialized");
-            displayInfo();
-        })
-        .catch((err) => {
-            console.error("LIFF initialization failed", err);
-            document.getElementById('info').textContent = 'LIFF 初始化失敗: ' + err.message;
+        // 確保 LIFF SDK 已載入
+        if (typeof liff === 'undefined') {
+            document.getElementById('info').textContent = 'LIFF SDK 未載入，請檢查網路連線或重新整理頁面。';
             document.getElementById('info').classList.add('error');
-        });
+        } else {
+            liff.init({ liffId: "2007557804-VzprogWq" })
+            .then(() => {
+                console.log("LIFF initialized");
+                displayInfo();
+            })
+            .catch((err) => {
+                console.error("LIFF initialization failed", err);
+                document.getElementById('info').textContent = 'LIFF 初始化失敗: ' + err.message;
+                document.getElementById('info').classList.add('error');
+            });
+        }
 
         async function displayInfo() {
             try {
@@ -58,4 +64,5 @@
 </body>
 
 </html>
+
 
